--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ COLORS:
  }
 
  header {
-   background-image: linear-gradient(to right, #00568c, #ffffff);
+   background-image: linear-gradient(to right, #00568c, #00568c , #ffffff);
  }
 
  nav {
@@ -45,7 +45,6 @@ COLORS:
  }
 
  nav ul li a {
-   color: #ffffff;
    text-decoration: none;
    font-size: 1.5em;
  }
@@ -65,6 +64,7 @@ COLORS:
  h1 {
     font-size: 5em;
     color: #008e66;
+    margin-left: 10px;
  }
 
  blockquote {
@@ -91,9 +91,16 @@ h3 {
 
 .mainIMG {
    max-height: 500px;
-   min-height: 400px;
    max-width: 600px;
-   min-width: 500px;
+   float: left;
+   padding: 10px;
+}
+
+.mainIMG2 {
+   max-height: 500px;
+   max-width: 600px;
+   float: right;
+   padding: 10px;
 }
 
  table {
