--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ COLORS:
  }
 
  nav ul li:hover {
-   background-color: #ffffff;
+   background-color: #008e66;
    text-decoration: underline;
    color: black;
  }
