--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ COLORS:
    margin-top: .8%;
  }
 
- nav a {
+ nav ul li a {
    color: #ffffff;
    text-decoration: none;
    font-size: 1.5em;
@@ -53,7 +53,13 @@ COLORS:
  nav ul li:hover {
    background-color: #008e66;
    text-decoration: underline;
-   color: black;
+   color: #ffffff;
+ }
+
+ nav ul li a:hover {
+   background-color: #008e66;
+   text-decoration: underline;
+   color: #ffffff;
  }
 
  h1 {
@@ -115,7 +121,7 @@ footer a {
 }
 
 footer a:hover {
-   background-color: white;
+   background-color: #ffffff;
    color: black;
    text-decoration: underline;
 }
