--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ footer {
    text-align: center;
 }
 
-footer a {
+#template {
    background-color: #00568c;
    color: #008e66;
    padding: 10px;
@@ -120,7 +120,7 @@ footer a {
    float: right;
 }
 
-footer a:hover {
+#template:hover {
    background-color: #ffffff;
    color: black;
    text-decoration: underline;
