--- a/css/styles.css
+++ b/css/styles.css
@@ -115,10 +115,10 @@ footer {
 
 #template {
    background-color: #00568c;
-   color: #008e66;
+   color: #ffffff;
    padding: 10px;
    border-radius: 5px;
-   font-size: 1.5em;
+   font-size: 1.2em;
    text-align: center;
 }
 
