--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,12 @@ COLORS:
    background-image: linear-gradient(#00568c, #00568c , #ffffff);
  }
 
+ .headerLogo {
+   max-height: 300px;
+   max-width: 400;
+   margin-left: 50%;
+ }
+
  nav {
    background-color: #00568c;
    padding: 5px 0;
