--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ COLORS:
  .headerLogo {
    max-height: 300px;
    max-width: 400;
-   margin-left: 50%;
+   margin-left: 25%;
  }
 
  nav {
@@ -88,7 +88,7 @@ main #container {
    width: 80%;
    min-height: 500px;
    font-size: 1.8em;
-   background-image: linear-gradient(#ffffff, #cccccc, #cccccc, #008e66);
+   background-image: linear-gradient(#ffffff, #cccccc, #cccccc, #008e66, #ffffff);
 }
 
 h3 {
@@ -112,6 +112,10 @@ h3 {
 
  table {
 
+ }
+
+ #colors {
+   background-image: linear-gradient(#ffffff, #00568c, #00568c);
  }
 
 footer {
