--- a/css/styles.css
+++ b/css/styles.css
@@ -120,12 +120,13 @@ h3 {
  }
 
  #colors {
-   background-image: linear-gradient(#ffffff, #00568c, #00568c);
+   background-image: linear-gradient(#ffffff, #00568c);
  }
 
 footer {
    text-align: center;
    font-size: 1.2em;
+   background-image: linear-gradient(#00568c, #00568c , #ffffff);
 }
 
 #template {
