--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ COLORS:
  }
 
  header {
-   background-image: linear-gradient(#00568c, #00568c , #ffffff);
+   background-image: linear-gradient(#00568c, #00568c , #ffffff, #00568c;
  }
 
  .headerLogo {
@@ -66,6 +66,10 @@ COLORS:
    background-color: #008e66;
    text-decoration: underline;
    color: #ffffff;
+ }
+
+ #colors1 {
+   background-image: linear-gradient(#00568c, #ffffff);
  }
 
  h1 {
@@ -126,7 +130,7 @@ h3 {
 footer {
    text-align: center;
    font-size: 1.2em;
-   background-image: linear-gradient(#00568c, #00568c , #ffffff);
+   background-image: linear-gradient(#00568c, #ffffff);
 }
 
 #template {
